--- a/oas_docs/output/kibana.serverless.staging.yaml
+++ b/oas_docs/output/kibana.serverless.staging.yaml
@@ -14772,7 +14772,8 @@ paths:
                       type: string
                   required:
                     - noteId
-                - type: object
+                - nullable: true
+                  type: object
                   properties:
                     noteIds:
                       items:
@@ -14803,19 +14804,18 @@ paths:
       parameters:
         - in: query
           name: documentIds
-          required: true
           schema:
             $ref: '#/components/schemas/Security_Timeline_API_DocumentIds'
         - in: query
           name: page
           schema:
             nullable: true
-            type: number
+            type: string
         - in: query
           name: perPage
           schema:
             nullable: true
-            type: number
+            type: string
         - in: query
           name: search
           schema:
@@ -14838,6 +14838,12 @@ paths:
             type: string
       responses:
         '200':
+          content:
+            application/json; Elastic-Api-Version=2023-10-31:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Security_Timeline_API_GetNotesResult'
+                  - type: object
           description: Indicates the requested notes were returned.
       summary: Get all notes for a given document.
       tags:
@@ -14886,18 +14892,8 @@ paths:
                     type: object
                     properties:
                       persistNote:
-                        type: object
-                        properties:
-                          code:
-                            type: number
-                          message:
-                            type: string
-                          note:
-                            $ref: '#/components/schemas/Security_Timeline_API_Note'
-                        required:
-                          - code
-                          - message
-                          - note
+                        $ref: >-
+                          #/components/schemas/Security_Timeline_API_ResponseNote
                     required:
                       - persistNote
                 required:
@@ -15265,15 +15261,8 @@ paths:
                     type: object
                     properties:
                       persistPinnedEventOnTimeline:
-                        allOf:
-                          - $ref: >-
-                              #/components/schemas/Security_Timeline_API_PinnedEvent
-                          - type: object
-                            properties:
-                              code:
-                                type: number
-                              message:
-                                type: string
+                        $ref: >-
+                          #/components/schemas/Security_Timeline_API_PersistPinnedEventResponse
                     required:
                       - persistPinnedEventOnTimeline
                 required:
@@ -31180,7 +31169,6 @@ components:
           nullable: true
           type: string
         timelineId:
-          nullable: true
           type: string
         updated:
           nullable: true
@@ -31189,6 +31177,28 @@ components:
           nullable: true
           type: string
       required:
+        - timelineId
+    Security_Timeline_API_BarePinnedEvent:
+      type: object
+      properties:
+        created:
+          nullable: true
+          type: number
+        createdBy:
+          nullable: true
+          type: string
+        eventId:
+          type: string
+        timelineId:
+          type: string
+        updated:
+          nullable: true
+          type: number
+        updatedBy:
+          nullable: true
+          type: string
+      required:
+        - eventId
         - timelineId
     Security_Timeline_API_ColumnHeaderResult:
       type: object
@@ -31362,6 +31372,18 @@ components:
           type: string
         script:
           type: string
+    Security_Timeline_API_GetNotesResult:
+      type: object
+      properties:
+        notes:
+          items:
+            $ref: '#/components/schemas/Security_Timeline_API_Note'
+          type: array
+        totalCount:
+          type: number
+      required:
+        - totalCount
+        - notes
     Security_Timeline_API_ImportTimelineResult:
       type: object
       properties:
@@ -31422,34 +31444,38 @@ components:
               type: string
             version:
               type: string
+          required:
+            - noteId
+            - version
+    Security_Timeline_API_PersistPinnedEventResponse:
+      oneOf:
+        - allOf:
+            - $ref: '#/components/schemas/Security_Timeline_API_PinnedEvent'
+            - $ref: >-
+                #/components/schemas/Security_Timeline_API_PinnedEventBaseResponseBody
+        - nullable: true
+          type: object
     Security_Timeline_API_PinnedEvent:
+      allOf:
+        - $ref: '#/components/schemas/Security_Timeline_API_BarePinnedEvent'
+        - type: object
+          properties:
+            pinnedEventId:
+              type: string
+            version:
+              type: string
+          required:
+            - pinnedEventId
+            - version
+    Security_Timeline_API_PinnedEventBaseResponseBody:
       type: object
       properties:
-        created:
-          nullable: true
+        code:
           type: number
-        createdBy:
-          nullable: true
-          type: string
-        eventId:
-          type: string
-        pinnedEventId:
-          type: string
-        timelineId:
-          type: string
-        updated:
-          nullable: true
-          type: number
-        updatedBy:
-          nullable: true
-          type: string
-        version:
+        message:
           type: string
       required:
-        - eventId
-        - pinnedEventId
-        - timelineId
-        - version
+        - code
     Security_Timeline_API_QueryMatchResult:
       type: object
       properties:
@@ -31494,6 +31520,19 @@ components:
           type: object
         readable:
           type: boolean
+    Security_Timeline_API_ResponseNote:
+      type: object
+      properties:
+        code:
+          type: number
+        message:
+          type: string
+        note:
+          $ref: '#/components/schemas/Security_Timeline_API_Note'
+      required:
+        - code
+        - message
+        - note
     Security_Timeline_API_RowRendererId:
       enum:
         - alert
