--- a/x-pack/plugins/fleet/common/openapi/components/schemas/fleet_settings_enrollment_response.yaml
+++ b/x-pack/plugins/fleet/common/openapi/components/schemas/fleet_settings_enrollment_response.yaml
@@ -23,6 +23,12 @@ properties:
               type: string
             download_source_id:
               type: string
+            space_ids:
+              type: array
+              items:
+                type: string
+            data_output_id:
+              type: string
           required:
             - id
             - name
@@ -32,6 +38,10 @@ properties:
       host:
         $ref: ./fleet_server_host.yaml
       host_proxy:
+        $ref: ./proxies.yaml
+      es_output:
+        $ref: ./output_create_request_elasticsearch.yaml
+      es_output_proxy:
         $ref: ./proxies.yaml
     required:
       - agent_policies
